kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: panchase-service
spec:
  type: NodePort
  selector:
    app: panchase
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort : 30080
